--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
               <li>
                 <%= form_tag("/products", method: "get", class: "navbar-form navbar-left") do %>
                   
-                  <%= text_field_tag :search, params[:search], class: "form-control col-lg-8", placeholder: "Search"%>
+                  <%= text_field_tag :search, params[:search], class: "form-control col-lg-8", placeholder: "Search for Product"%>
                 <% end %>
 
               </li> 
