--- a/app/views/products/about.html.erb
+++ b/app/views/products/about.html.erb
@@ -10,17 +10,30 @@
             </div>
 
 		     <div>
-		     	<p>Unter dem Motto „Shareconomy“ blickt die Cebit auf Tauschgeschäfte über das Internet. Der Trend zum gemeinsamen Konsum erfasst inzwischen auch Unternehmen.</p>
 
-		     	<h3>Teile und spare</h3>
 
-		     	<p>Über den Anfang machten sich viele lustig. „Zylinder auf Rädern“ oder „Fliegender Badebottich“ nannten die Amsterdamer das Autoteilprojekt Witkar, das der Ingenieur Luud Schimmelpennink erfunden hatte. Vor fast 39 Jahren rief Schimmelpennink mit Witkar in den Niederlanden eines der ersten Carsharing-Systeme der Welt ins Leben. Es lief 14 Jahre und zu Hochzeiten teilten sich rund 5000 Menschen die klobigen Fahrzeuge. Heute erreicht das Teilen über das Internet andere Größenordnungen.</p>
+		     	<h3>Kleiderschrank-Problem</h3>
+		     	<p>Kennt ihr das auch, der Kleiderschrank platzt aus allen Nähten, aber man findet trozdem nichts passendes zum anziehen? Abiball, Hochzeit, oder andere Feierlichkeiten steht bevor, du brauchst entspechende Bekleidung, aber kaufen für einmal anziehen? Aus Event- und Modegründen neigen wir oft dazu, neue Sachen zu kaufen, die leider nur saisonal verwendet werden. Das ist doch schade oder?</p>
 
-		     	<p>Einer repräsentativen Umfrage des Branchenverbands Bitkom zufolge ist Teilen vor allem unter Jüngeren beliebt. So sehen 97 Prozent der 14 bis 29 Jahre alten Deutschen es als selbstverständlich an, das Netz zu nutzen, um Wissen, Ressourcen oder Erfahrungen zu tauschen. Inzwischen gibt es Tauschplattformen für alles: Auf Seiten wie Unseraller.de können Menschen ihre Erfahrungen einbringen, um neue Produkte mitzugestalten. Unter Kleiderkreisel.de tauschen Menschen Pumps, Pullover und Paillettenroben. Und auf Frents.de leihen sich Mitglieder untereinander ihre Bohrmaschinen.</p>
+		     	<h3>Umwelt-Problem</h3>
+		     	<p>Ressourcen auf unsere Erde ist begrenzt. Bekleidung verbraucht nicht nur Baumwolle, sondern auch Erdöl für den Transport, Stom für die Produktion, der in Produktionsländer oft nicht aus erneuerbare Quelle stammen. Schadstoffe werden bei der Produktion und Logistik an die Umwelt abgegeben. </p>
 
-		     	<p>Kürzlich hat der amerikanische Unterkunftvermittler Airbnb verkündet, dass über ihn im vergangenen Jahr rund um die Welt drei Millionen Menschen online eine temporäre Bleibe gefunden haben. Und in deutsche Carsharing-Autos sind 2012 mehr als 450000 Fahrer eingestiegen. Grund genug für die Cebit, in diesem Jahr unter dem Schlagwort „Shareconomy“ das Tauschen im Netz in den Mittelpunkt der Messe zu stellen.</p>
+		     	<h3>Die Lösung </h3>
+		     	<p>	In Hinblick auf finanziellen Gründen, Modebewusstsein und Umweltfreundlichkeit und Nachhaltigkeit können wir unsere Kleiderschrank mit andere teilen und auf anderens Kleiderschrank zugreifen. Stell dir eine dezentrale Bibliothek für Bekleidung vor. Du kannst online schauen, was vorhanden ist und was gerade ausleihbar ist. Wie es auch bei Bibliotheken üblich ist, reservierst du dein gewünschtes Kleidungsstück und gehst zu dem entsprechenden Bibliothek und leihst es aus, gegen eine geringe Gebühr. </p>
 
-		     	<a href="http://www.faz.net/aktuell/technik-motor/cebit/cebit-motto-shareconomy-teile-und-spare-12101159.html"> Quelle FAZ</a>
+		     	<h3>Wie funktioniert Share Flair?</h3>
+
+		     	<ol>
+		     		<li>Stöbere in "All Products" und schau was dir gefällt. Du kannst auf die Angebote auch sortieren lassen und so leichter deine Konfektionsgröße finden. Klicke auf das Produkt um mehr Details zu bekommen.</li>
+		     		<li>Anbieter kontaktieren, Bedingungen für die Ausleihe und Termin vereinbaren</li>
+		     		<li>Kleidung abholen </li>
+		     		<li>Und nicht vergessen Kleidung zurück zu geben in besster Zustand</li>
+		     	</ol>
+
+		     	<p>Wenn du eine Lieblingsanbieter gefunden hast, kannst du auch nur seine/ihre Angebote auf der "User"-Page finden</p>
+
+		     	<h3>Viel Spaß</h3>
+
 		     	
 		     </div>
 
