--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,11 @@
                 <h3>Product Details</h3>
                   <ul>
                     <li>
+                      <strong>City:</strong>
+                      <%= @product.user.city %>
+                    </li>
+
+                    <li>
                       <strong>Category:</strong>
                       <%= @product.category.name %>
                     </li>
