--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,7 @@
               <%= f.text_field :phone_number, class: "form-control"  %></div>
 
               <div class="form-group has-success"><%= f.label :description %><br />
-              <%= f.text_area :description, :placeholder =>" write s short description about you", class: "form-control"  %></div>
+              <%= f.text_area :description, :placeholder =>" Write a short description about you, don't forget to let other users know how to contact you !", class: "form-control"  %></div>
 
                <div class="form-group">
                 <%= f.label :"Add Avatar" %><br>
