--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,6 +24,9 @@
                   <div class="form-group has-success"><%= f.label :username %><br />
                 	<%= f.text_field :username, class: "form-control" %></div>
 
+                  <div class="form-group has-success"><%= f.label :city %><br />
+                 <%= f.text_field :city, class: "form-control"  %></div>
+
                   <div class="form-group has-success"><%= f.label :password %><br />
                   <%= f.password_field :password, class: "form-control" %></div>
 
