--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,13 @@
       <%= yield %>
     </div> 
 
-  </div>
+  <footer >
+    <div class="row">
+        <div class="col-lg-12">
+            <p id="f_id">Copyright &copy; Mai Dinh Thanh</p>
+        </div>
+    </div>
+  </footer>
 
 
 
