--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="page-header">
+
+            <%= render "search" %>
+
                 <h1 id="tables">
                     Availbale Products <br> 
                     <small><%= pluralize(@products_active.count, "Product") %></small>
@@ -15,7 +18,7 @@
             </div>
 
 		      <div> <%= render partial: "table", locals: {products: @products_active} %> </div>
-				</div>
+			</div>
 		</div>
 
         <div class="col-lg-12">
