--- a/app/views/users/_utable.html.erb
+++ b/app/views/users/_utable.html.erb
@@ -59,7 +59,7 @@
               <td ><%= u.gender %></td>
               <td ><%= u.size %></td>
               <td ><%= u.city %></td>
-              <td ><%= link_to pluralize(u.products.count, "Product"),  users_profile_path(id: u.id)  %></td>
+              <td ><%= link_to pluralize(u.products.count, "Product"),  users_profile_path(id: u.id,  anchor: "user_products")  %></td>
               
              <% end %>
         </tbody>
