--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -75,7 +75,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="well">
-            <h2>My Offers</h2>
+            <h2 id="user_products">My Offers</h2>
 
           <div class="row">
 
