user product nach erstelldatum sortiert. Suche muss noch weiter optimiert werden, Join muss funktionsfaehig gemacht werden um City in Poduct index zu sortieren

--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -60,13 +60,7 @@
                   <% end %>
               </th>
               
-              <th>
-                  <% if params[:sorting] == "city" %>
-                    City
-                  <% else %>
-                    <%= link_to "City", products_path(sorting: "city") %>
-                  <% end %>
-              </th>
+              <th>City</th>
                
               
               <th>
