--- a/app/views/products/_search.html.erb
+++ b/app/views/products/_search.html.erb
@@ -2,7 +2,7 @@
                   
 	<%= select_tag :category_id, options_for_select(Category.all.collect {|c| [ c.name, c.id ] }), { :include_blank => true} %>
 	<%= select_tag :target_group, options_for_select(Product.all.collect {|c| [ c.target_group] }), { :include_blank => true} %>
-	<%= select_tag :size, options_for_select(Product.all.collect {|c| [ c.size] }), { :include_blank => true} %>
+	<%= select_tag :size, options_for_select(Product.all.group("size").collect {|c| [ c.size] }), { :include_blank => true} %>
 
 
 	<%= submit_tag("Search") %>
