--- a/app/views/products/about.html.erb
+++ b/app/views/products/about.html.erb
@@ -1,43 +1,35 @@
-<div class="bs-docs-section">
-              
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="about">
-                    About Share Flair<br> 
-                    <small>The Idea</small>
-                </h1>
-            </div>
+<div class="bs-docs-section">          
+  <div class="col-md-12">
 
-		     <div>
+    <div class="page-header">
+      <h1 id="about">
+        About Share Flair<br> 
+        <small>The Idea</small>
+      </h1>
+    </div>
 
+  	<div>
+	   	<h3>Kleiderschrank-Problem</h3>
+	   	<p>Kennt ihr das auch, der Kleiderschrank platzt aus allen Nähten, aber man findet trozdem nichts passendes zum anziehen? Abiball, Hochzeit, oder andere Feierlichkeiten steht bevor, du brauchst entspechende Bekleidung, aber kaufen für einmal anziehen? Aus Event- und Modegründen neigen wir oft dazu, neue Sachen zu kaufen, die leider nur saisonal verwendet werden. Das ist doch schade oder?</p>
 
-		     	<h3>Kleiderschrank-Problem</h3>
-		     	<p>Kennt ihr das auch, der Kleiderschrank platzt aus allen Nähten, aber man findet trozdem nichts passendes zum anziehen? Abiball, Hochzeit, oder andere Feierlichkeiten steht bevor, du brauchst entspechende Bekleidung, aber kaufen für einmal anziehen? Aus Event- und Modegründen neigen wir oft dazu, neue Sachen zu kaufen, die leider nur saisonal verwendet werden. Das ist doch schade oder?</p>
+	   	<h3>Umwelt-Problem</h3>
+	   	<p>Ressourcen auf unsere Erde ist begrenzt. Bekleidung verbraucht nicht nur Baumwolle, sondern auch Erdöl für den Transport, Stom für die Produktion, der in Produktionsländer oft nicht aus erneuerbare Quelle stammen. Schadstoffe werden bei der Produktion und Logistik an die Umwelt abgegeben. </p>
 
-		     	<h3>Umwelt-Problem</h3>
-		     	<p>Ressourcen auf unsere Erde ist begrenzt. Bekleidung verbraucht nicht nur Baumwolle, sondern auch Erdöl für den Transport, Stom für die Produktion, der in Produktionsländer oft nicht aus erneuerbare Quelle stammen. Schadstoffe werden bei der Produktion und Logistik an die Umwelt abgegeben. </p>
+	   	<h3>Die Lösung </h3>
+	   	<p>	In Hinblick auf finanziellen Gründen, Modebewusstsein und Umweltfreundlichkeit und Nachhaltigkeit können wir unsere Kleiderschrank mit andere teilen und auf anderens Kleiderschrank zugreifen. Stell dir eine dezentrale Bibliothek für Bekleidung vor. Du kannst online schauen, was vorhanden ist und was gerade ausleihbar ist. Wie es auch bei Bibliotheken üblich ist, reservierst du dein gewünschtes Kleidungsstück und gehst zu dem entsprechenden Bibliothek und leihst es aus, gegen eine geringe Gebühr. </p>
 
-		     	<h3>Die Lösung </h3>
-		     	<p>	In Hinblick auf finanziellen Gründen, Modebewusstsein und Umweltfreundlichkeit und Nachhaltigkeit können wir unsere Kleiderschrank mit andere teilen und auf anderens Kleiderschrank zugreifen. Stell dir eine dezentrale Bibliothek für Bekleidung vor. Du kannst online schauen, was vorhanden ist und was gerade ausleihbar ist. Wie es auch bei Bibliotheken üblich ist, reservierst du dein gewünschtes Kleidungsstück und gehst zu dem entsprechenden Bibliothek und leihst es aus, gegen eine geringe Gebühr. </p>
-
-		     	<h3>Wie funktioniert Share Flair?</h3>
-
-		     	<ol>
-		     		<li>Stöbere in "All Products" und schau was dir gefällt. Du kannst auf die Angebote auch sortieren lassen und so leichter deine Konfektionsgröße finden. Klicke auf das Produkt um mehr Details zu bekommen.</li>
-		     		<li>Anbieter kontaktieren, Bedingungen für die Ausleihe und Termin vereinbaren</li>
-		     		<li>Kleidung abholen </li>
-		     		<li>Und nicht vergessen Kleidung zurück zu geben in besster Zustand</li>
-		     	</ol>
-
-		     	<p>Wenn du eine Lieblingsanbieter gefunden hast, kannst du auch nur seine/ihre Angebote auf der "User"-Page finden</p>
-
-		     	<h3>Viel Spaß</h3>
-
-		     	
-		     </div>
-
+	   	<h3>Wie funktioniert Share Flair?</h3>
+	   	<ol>
+	   		<li>Stöbere in "All Products" und schau was dir gefällt. Du kannst auf die Angebote auch sortieren lassen und so leichter deine Konfektionsgröße finden. Klicke auf das Produkt um mehr Details zu bekommen.</li>
+	   		<li>Anbieter kontaktieren, Bedingungen für die Ausleihe und Termin vereinbaren</li>
+	   		<li>Kleidung abholen </li>
+	   		<li>Und nicht vergessen Kleidung zurück zu geben in besster Zustand</li>
+	   	</ol>
+	   	<p>Wenn du eine Lieblingsanbieter gefunden hast, kannst du auch nur seine/ihre Angebote auf der "User"-Page finden</p>
+	   	<br><br>
+	   	<h3>Share Flair wünscht euch viel Spaß</h3>																							
 		</div>
-	</div>
 
+	</div>
 </div>
+
