--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,10 @@
 <div class="container">
-
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       <div class="page-header">
           <h1>Edit <%= resource_name.to_s.humanize %></h1>
-      </div>
-      
-    <div class="col-lg-8 col-lg-offset-2">
+      </div>      
+    <div class="col-md-8 col-md-offset-2">
      <div class="well">
         <div class="panel panel-info">
           <div class="panel-body">
@@ -15,8 +13,6 @@
 
               <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
               <%= devise_error_messages! %>
-
-
 
               <div class="form-group has-success"><%= f.label :email %><br />
               <%= f.email_field :email, :autofocus => true, class: "form-control"  %></div>
@@ -77,10 +73,7 @@
         </div>
         <%= link_to "Back", :back %>
       </div>
-    </div>
-
-
-    
+    </div>    
   </div>
 </div>
        
