--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,53 +1,49 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+  <div class="container">
 
-        <a class="navbar-brand" <%= link_to "Share Flair", root_path %></a>
-      </div>
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      	<ul class="nav navbar-nav">
-		      <li class="link"><%= link_to "All Products", products_path %></li>
-		      <li class="link"><%= link_to "Make Insertion", new_product_path %></li>
-              <li class="link"><%= link_to "User", users_all_user_path %></li>
-		      <li class="link"><%= link_to "About", products_about_path %></li>
-              <li>
-                <%= form_tag("/products", method: "get", class: "navbar-form navbar-left") do %>
-                  
-                  <%= text_field_tag :search, params[:search], class: "form-control col-lg-8", placeholder: "Search for Product"%>
-                <% end %>
-
-              </li> 
-        </ul>
-
-         <ul class="nav navbar-nav navbar-right">
-                    
-                
-
-                <% if user_signed_in? %>
-                    <li>
-                        <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
-                    </li>
-                    <li>
-                        <%= link_to "Edit profile: " + current_user.username, edit_user_registration_path  %>  
-                    </li>
-                    <% else %>
-                    <li>
-                        <%= link_to 'Login', new_user_session_path %>
-                    </li>
-                    <li>
-                        <%= link_to 'Sign up', new_user_registration_path %>
-                    </li>
-                <% end %>
-            </ul>
-        </div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+      <%= link_to "Shaire Flair", root_path, :class => "navbar-brand" %>         
     </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+	      <li class="link"><%= link_to "All Products", products_path %></li>
+	      <li class="link"><%= link_to "Make Insertion", new_product_path %></li>
+        <li class="link"><%= link_to "User", users_all_user_path %></li>
+	      <li class="link"><%= link_to "About", products_about_path %></li>
+        <li>
+          <%= form_tag("/products", method: "get", class: "navbar-form navbar-left") do %>            
+          <%= text_field_tag :search, params[:search], class: "form-control col-lg-8", placeholder: "Search for Product"%>
+          <% end %>
+        </li> 
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">                  
+        <% if user_signed_in? %>
+          <li>
+              <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+          </li>
+          <li>
+              <%= link_to "Edit profile: " + current_user.username, edit_user_registration_path  %>  
+          </li>
+        <% else %>
+          <li>
+              <%= link_to 'Login', new_user_session_path %>
+          </li>
+          <li>
+              <%= link_to 'Sign up', new_user_registration_path %>
+          </li>
+        <% end %>
+      </ul>
+      
+    </div>
+  </div>
 </div>
 
 
