--- a/app/views/products/baby.html.erb
+++ b/app/views/products/baby.html.erb
@@ -1,25 +1,30 @@
-<div class="bs-docs-section">
+<div class="bs-docs-section"> 
+    <div class="panel panel-info">
+        <div class="panel-heading">            
+            <%= select_tag :category_id, options_for_select(Category.all.collect {|c| [ c.name, c.id ] }) %>
+            <%= select_tag :size, options_for_select(Product.all.group("size").collect {|c| [ c.size] }) %>
+            <%= submit_tag("Search") %>            
+        </div>                              
+    </div>  
 
-  
-              
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
-                    Availbale Products <br> 
+                    Availbale Offers for Babies<br> 
                     <small><%= pluralize(@products_active.count, "Product") %></small>
                 </h1>
             </div>
 
-						<div> 
-						<%= render partial: "table", locals: {products: @products_active} %> 
-						<%= yield %>
-						</div>
-				</div>
-		</div>
+            <div> 
+            <%= render partial: "table", locals: {products: @products_active} %> 
+            <%= yield %>
+            </div>
+        </div>
+    </div>
 
-		<div class="row">
-        <div class="col-lg-12">
+    <div class="row">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
                     Currently Not Available <br> 
@@ -27,11 +32,11 @@
                 </h1>
             </div>
 
-						<div> 
-							<%= render partial: "table", locals: {products: @products_inactive} %> 
-							<%= yield %>
-						</div>
-				</div>
-		</div>
-		
+            <div> 
+                <%= render partial: "table", locals: {products: @products_inactive} %> 
+                <%= yield %>
+            </div>
+        </div>
+    </div>
+        
 </div>
