--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,15 +1,11 @@
-<div class="container">
-
+<div class="bs-docs-section">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       <div class="page-header">          
-           <h1>New product</h1>
-      </div>
-      
+        <h1>Edit Offer</h1>
+      </div>      
 			<%= render 'form' %>
-		</div>
-
-		 
+		</div>		 
   </div>
 </div>
 
