--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,122 +1,116 @@
-<div class="jumbotron">
+<div class="bs-docs-section">
 
-    <div class="row carousel-holder">
-        <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
-                    <li class="" data-slide-to="1" data-target="#carousel-example-generic"></li>
-                    <li class="active" data-slide-to="2" data-target="#carousel-example-generic"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item">
-                        <h1>Share Flair</h1>
-						<p class="lead">
-						    Teilen Macht Spaß ;)
-						</p>
-                    </div>
-                    <div class="item">
-                        <h1>Share Flair</h1>
-						<p class="lead">
-						    Mein Kleiderschrank = Dein Kleiderschrank
-						</p>
-                    </div>
-                    <div class="item active">
-                        <h1>Share Flair</h1>
-						<p class="lead">
-						    Next Generation Clothing
-						</p>
-                    </div>
-                </div>
-                <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic">
-                    
-                </a>
-                <a class="right carousel-control" data-slide="next" href="#carousel-example-generic">
-                    
-                </a>
+	<div class="jumbotron">
+	  <div class="row carousel-holder">
+	    <div class="col-md-12">
+	      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
+              <li class="" data-slide-to="1" data-target="#carousel-example-generic"></li>
+              <li class="active" data-slide-to="2" data-target="#carousel-example-generic"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item">
+              <h1>Share Flair</h1>
+							<p class="lead">
+							  Teilen Macht Spaß ;)
+							</p>
             </div>
+            <div class="item">
+              <h1>Share Flair</h1>
+							<p class="lead">
+							    Mein Kleiderschrank = Dein Kleiderschrank
+							</p>
+            </div>
+            <div class="item active">
+               <h1>Share Flair</h1>
+							<p class="lead">
+							    Next Generation Clothing
+							</p>
+            </div>
+          </div>
+
+          <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic"></a>
+          <a class="right carousel-control" data-slide="next" href="#carousel-example-generic"></a>               
         </div>
-   </div>
-</div>
-
-<div class="row">
-
-	<div class="col-sm-4 col-lg-4 col-md-4">
-	    <div class="thumbnail">
-	       <a href="products/lady"> <%= image_tag ("lady.jpg") %> </a> 
-	        <div class="caption">
-	        	<h4 class="pull-right"><%= pluralize(@productslady.count, "Product") %></h4>
-	            <h4>
-	            	<a href="products/lady">Ladies</a>
-	            	
-	            	
-	            </h4>
-	        </div>
-	  	</div>
-	</div>
- 
-	<div class="col-sm-4 col-lg-4 col-md-4">
-	    <div class="thumbnail">
-	        <a href="products/girl"> <%= image_tag ("girls.jpg") %> </a>
-	        <div class="caption">
-	        	<h4 class="pull-right"><%= pluralize(@productsgirl.count, "Product") %></h4>
-	            <h4>
-	            	<a href="products/girl">Girls</a>
-	            	
-	            </h4>
-	        </div>
-	  	</div>
+      </div>
+ 		</div>
 	</div>
 
-	<div class="col-sm-4 col-lg-4 col-md-4">
+	<div class="row">
+		<div class="col-sm-4 col-md-4 col-md-4">
+		  <div class="thumbnail">
+	      <a href="products/lady"> <%= image_tag ("lady.jpg") %> </a> 
+        <div class="caption">
+        	<h4 class="pull-right"><%= pluralize(@productslady.count, "Product") %></h4>
+           <h4>
+            	<a href="products/lady">Ladies</a>	            	
+          </h4>
+        </div>
+		  </div>
+		</div>
+	 
+		<div class="col-sm-4 col-md-4 col-md-4">
 	    <div class="thumbnail">
-	       <a href="products/baby">  <%= image_tag ("baby.JPG") %>  </a>
-	        <div class="caption">
-	        	<h4 class="pull-right"><%= pluralize(@productsbaby.count, "Product") %></h4>
-	            <h4>
-	            	<a href="products/baby">Babies</a>
-	            	
-	            </h4>
-	        </div>
+        <a href="products/girl"> <%= image_tag ("girls.jpg") %> </a>
+        <div class="caption">
+        	<h4 class="pull-right"><%= pluralize(@productsgirl.count, "Product") %></h4>
+          <h4>
+            <a href="products/girl">Girls</a>            	
+          </h4>
+        </div>
 	  	</div>
-	</div>
+		</div>
 
-	<div class="col-sm-4 col-lg-4 col-md-4">
+		<div class="col-sm-4 col-md-4 col-md-4">
 	    <div class="thumbnail">
-	       <a href="products/man"> <%= image_tag ("gents.jpg") %> </a>
-	        <div class="caption">
-	        	<h4 class="pull-right"><%= pluralize(@productsgent.count, "Product") %></h4>
-	            <h4>
-	            	<a href="products/man">Gentlemen</a>
-	            	
-	            </h4>
-	        </div>
-	  	</div>
-	</div>
+      	<a href="products/baby">  <%= image_tag ("baby.JPG") %>  </a>
+        <div class="caption">
+        	<h4 class="pull-right"><%= pluralize(@productsbaby.count, "Product") %></h4>
+          <h4>
+          	<a href="products/baby">Babies</a>            	
+          </h4>
+        </div>
+  		</div>
+		</div>
 
-	<div class="col-sm-4 col-lg-4 col-md-4">
-	    <div class="thumbnail">
-	        <a href="products/boy"> <%= image_tag ("boy.jpg") %> </a>
-	        
-	        <div class="caption">
-	        	<h4 class="pull-right"><%= pluralize(@productsboy.count, "Product") %></h4>
-	            <h4>
-	            	<a href="products/boy">Boys</a>
-	            </h4>
-	        </div>
-	  	</div>
-	</div>
+		<div class="col-sm-4 col-md-4 col-md-4">
+		    <div class="thumbnail">
+		       <a href="products/man"> <%= image_tag ("gents.jpg") %> </a>
+		        <div class="caption">
+		        	<h4 class="pull-right"><%= pluralize(@productsgent.count, "Product") %></h4>
+		            <h4>
+		            	<a href="products/man">Gentlemen</a>
+		            	
+		            </h4>
+		        </div>
+		  	</div>
+		</div>
 
-	<div class="col-sm-4 col-lg-4 col-md-4">
+		<div class="col-sm-4 col-md-4 col-md-4">
 	    <div class="thumbnail">
-	        <a href="products/last"> <%= image_tag ("mk2.jpg") %> </a>
-	        <div class="caption">
-	            <h4>
-	            	<a href="products/last">Lastest 20 Articles </a>
-	            </h4>
-	        </div>
+        <a href="products/boy"> <%= image_tag ("boy.jpg") %> </a>        
+        <div class="caption">
+      		<h4 class="pull-right"><%= pluralize(@productsboy.count, "Product") %></h4>
+          <h4>
+          	<a href="products/boy">Boys</a>
+          </h4>
+        </div>
 	  	</div>
+		</div>
+
+		<div class="col-sm-4 col-md-4 col-md-4">
+	    <div class="thumbnail">
+        <a href="products/last"> <%= image_tag ("mk2.jpg") %> </a>
+        <div class="caption">
+          <h4>
+          	<a href="products/last">Lastest 20 Articles </a>
+          </h4>
+        </div>
+	  	</div>
+		</div>	                   
 	</div>
-                   
+	
 </div>
 
