--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,39 +1,39 @@
+<div class="bs-docs-section">   
+                              
+    <div class="panel panel-info">
+        <div class="panel-heading">            
+            <%= render "search" %>            
+        </div>                              
+    </div>        
+    
 
-<%= link_to 'Insert New Product', new_product_path, class: "btn btn-success btn-df" %>
-
-<div class="bs-docs-section">
-
-
-              
+                
     <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-
-            <%= render "search" %>
-
+        <div class="col-md-12">
+            <div class="page-header">                
                 <h1 id="tables">
                     Availbale Products <br> 
                     <small><%= pluralize(@products_active.count, "Product") %></small>
                 </h1>
             </div>
-
-		      <div> <%= render partial: "table", locals: {products: @products_active} %> </div>
+            <div> 
+                <%= render partial: "table", locals: {products: @products_active} %> </div>
 			</div>
 		</div>
 
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
                     Currently Not Available <br> 
                     <small><%= pluralize(@products_inactive.count, "Product") %></small>
                 </h1>
             </div>
-
-              <div> <%= render partial: "table", locals: {products: @products_inactive} %> </div>
-                </div>
+            <div> 
+                <%= render partial: "table", locals: {products: @products_inactive} %> </div>
+            </div>
         </div>
-
-		
+    </div>
+    		
 </div>
 
 
