--- a/app/views/products/lady.html.erb
+++ b/app/views/products/lady.html.erb
@@ -1,25 +1,23 @@
-<div class="bs-docs-section">
+<div class="bs-docs-section"> 
 
-  
-              
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
-                    Availbale Products <br> 
+                    Availbale Products For Ladies<br> 
                     <small><%= pluralize(@products_active.count, "Product") %></small>
                 </h1>
             </div>
 
-						<div> 
-						<%= render partial: "table", locals: {products: @products_active} %> 
-						<%= yield %>
-						</div>
-				</div>
-		</div>
+            <div> 
+            <%= render partial: "table", locals: {products: @products_active} %> 
+            <%= yield %>
+            </div>
+        </div>
+    </div>
 
-		<div class="row">
-        <div class="col-lg-12">
+    <div class="row">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
                     Currently Not Available <br> 
@@ -27,11 +25,11 @@
                 </h1>
             </div>
 
-						<div> 
-							<%= render partial: "table", locals: {products: @products_inactive} %> 
-							<%= yield %>
-						</div>
-				</div>
-		</div>
-		
+            <div> 
+                <%= render partial: "table", locals: {products: @products_inactive} %> 
+                <%= yield %>
+            </div>
+        </div>
+    </div>
+        
 </div>
