--- a/app/views/products/last.html.erb
+++ b/app/views/products/last.html.erb
@@ -1,21 +1,18 @@
 <div class="bs-docs-section">
-
-  
               
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="tables">
-                    Most Recent 
-                </h1>
-            </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+          <h1 id="tables">
+             Most Recent 
+          </h1>
+      </div>
 
-						<div> 
-						<%= render partial: "table", locals: {products: @products_active} %> 
-						<%= yield %>
-						</div>
-				</div>
+			<div> 
+				<%= render partial: "table", locals: {products: @products_active} %> 
+				<%= yield %>
+			</div>
 		</div>
+	</div>
 
-		
 </div>
