--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,83 +1,78 @@
+<div class="bs-docs-section">
+  <div class="row">
 
+    <div class="col-md-12">
+      <h1 class="page-header">
+        <%= @product.title %>    <br>         
+        <small>from User <%= @product.user.username %></small>
+      </h1>
+    </div>
+  </div>
 
-<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <%= image_tag @product.image_url(:normal) if @product.image? %>
+    </div>
 
-        <div class="row">
+    <div class="col-md-4">
+      <h3>Product Description</h3>
+      <p><%= @product.description %></p>
 
-            <div class="col-lg-12">
-                <h1 class="page-header">
-                  <%= @product.title %>    <br>         
-                  <small>from User <%= @product.user.username %></small>
-                </h1>
+      <h3>Product Details</h3>
+        <ul>
+          <li>
+            <strong>City:</strong>
+            <%= @product.user.city %>
+          </li>
+
+          <li>
+            <strong>Category:</strong>
+            <%= @product.category.name %>
+          </li>
+
+          <li>
+            <strong>Target group:</strong>
+            <%= @product.target_group %>
+          </li>
+
+          <li>
+            <strong>Size:</strong>
+            <%= @product.size %>
+          </li>
+
+          <li>
+            <strong>Color:</strong>
+            <%= @product.color %>
+          </li>
+
+          <li>
+            <strong>Price:</strong>
+            <%= @product.price %> (€) related to 
+            <strong>Price:</strong>
+            <%= @product.duration %>
+          </li>
+
+          <li>
+            <strong>My Product is:</strong> 
+            <%= form_for @product do |f| %>              
+            <div class ="radio">
+              <%= f.label :active, "avaiable" %>
+              <%= f.radio_button :active, true, class: "checkable" %> 
             </div>
-
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-8">
-                <%= image_tag @product.image_url(:normal) if @product.image? %>
+            <div class ="radio">
+              <%= f.label :active, "not available" %>
+              <%= f.radio_button :active, false, class: "checkable"%>
             </div>
+            <% end %>                      
+            <p><small>Owners can change availability by choosing the appropriate option</small></p>
+          </li>
+        </ul>
+      
 
-            <div class="col-md-4">
-                <h3>Product Description</h3>
-                <p><%= @product.description %></p>
-
-                <h3>Product Details</h3>
-                  <ul>
-                    <li>
-                      <strong>City:</strong>
-                      <%= @product.user.city %>
-                    </li>
-
-                    <li>
-                      <strong>Category:</strong>
-                      <%= @product.category.name %>
-                    </li>
-
-                    <li>
-                      <strong>Target group:</strong>
-                      <%= @product.target_group %>
-                    </li>
-
-                    <li>
-                      <strong>Size:</strong>
-                      <%= @product.size %>
-                    </li>
-
-                    <li>
-                      <strong>Color:</strong>
-                      <%= @product.color %>
-                    </li>
-
-                    <li>
-                      <strong>Price:</strong>
-                      <%= @product.price %> (€) related to 
-                      <strong>Price:</strong>
-                      <%= @product.duration %>
-                    </li>
-                    <li>
-                      <strong>My Product is:</strong> 
-                      <%= form_for @product do |f| %>              
-                      <div class ="radio">
-                        <%= f.label :active, "avaiable" %>
-                        <%= f.radio_button :active, true, class: "checkable" %> 
-                      </div>
-                      <div class ="radio">
-                        <%= f.label :active, "not available" %>
-                        <%= f.radio_button :active, false, class: "checkable"%>
-                       </div>
-                       <% end %>                      
-                      <p><small>Owners can change availability by choosing the appropriate option</small></p>
-                    </li>
-                  </ul>
-
-            <%= link_to 'Back to All Products', products_path, class: "btn btn-info "  %> |
-            <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
-            <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
-
-          
-
-            </div>
-
-        </div>
+      <%= link_to 'Back to All Products', products_path, class: "btn btn-info "  %> |
+      <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
+      <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+    
+  </div>    
+</div>
