--- a/app/views/users/all_user.html.erb
+++ b/app/views/users/all_user.html.erb
@@ -1,16 +1,12 @@
-<div class="bs-docs-section">
-
-  
-              
+<div class="bs-docs-section"> 
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
                     Users <br> 
                     <small>and their products</small>
                 </h1>
             </div>
-
 			<div> 
 			<%= render "utable"%> 
 			<%= yield %>
