--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,98 +1,92 @@
-
-
-
 <div class="container">
   <div class="bs-docs-section"> 
               
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="page-header">
                 <h1 id="tables">
-                     <%= @user.username %> <br> 
-                    <small>and <% if (@user.gender == "Male") %>
-                      his
-                      <% elsif (@user.gender == "Female") %>
-                      her
-                      <% else %>
-                       his/her
-                      <% end %> offers</small>
+                  <%= @user.username %> <br> 
+                  <small>and <% if (@user.gender == "Male") %>
+                  his
+                  <% elsif (@user.gender == "Female") %>
+                  her
+                  <% else %>
+                   his/her
+                  <% end %> offers</small>
                 </h1>
             </div>
-
-            
-
-
-  <div class="row">
-    <div class="col-lg-12">
-        <div class="well">
-            <h2>That's Me</h2>
-
-          <div class="row">
-
-            <div class="col-lg-4 " >
-
-               <div class="panel panel-primary">                
-                
-                <div class="panel-body">
-                 <%= image_tag @user.avatar_url(:avatar) if @user.avatar? %>
-                </div>                  
-              </div>
-
-              <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        How to contact me
-                    </h3>
-                </div>
-                <div class="panel-body">
-                 <h4> Phone: <%= @user.phone_number %> </h4> 
-                 <h4> E-mail:  <%= @user.email %>  </h4> 
-                 <h4> Adress: <%= @user.address %> </h4> 
-                 <h4> City: <%= @user.city%> </h4> 
-                </div>                  
-              </div>
-            </div>
-
-            <div class="col-lg-8" > 
-              <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Something about me
-                    </h3>
-                </div>
-                <div class="panel-body">
-                  <p> <%= @user.description %></p> 
-                 <h4> Gender:  <%= @user.gender %>  </h4> 
-                 <h4> Usually I use this size: <%= @user.size %> </h4>    
-                 <h4> I live in: <%= @user.city%> </h4>                  
-                </div>                  
-              </div>
-            </div>            
-
-          </div>
         </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="well">
+          <h2>That's Me</h2>
+
+            <div class="row">
+              <div class="col-md-4 " >
+                <div class="panel panel-primary">              
+                  <div class="panel-body">
+                    <%= image_tag @user.avatar_url(:avatar) if @user.avatar? %>
+                  </div>                  
+                </div>
+
+                <div class="panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">
+                      How to contact me
+                    </h3>
+                  </div>
+                  <div class="panel-body">
+                   <h4> Phone: <%= @user.phone_number %> </h4> 
+                   <h4> E-mail:  <%= @user.email %>  </h4> 
+                   <h4> Adress: <%= @user.address %> </h4> 
+                   <h4> City: <%= @user.city%> </h4> 
+                  </div>                  
+                </div>
+              </div>
+
+              <div class="col-md-8" > 
+                <div class="panel panel-info">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">
+                      Something about me
+                    </h3>
+                  </div>
+                  <div class="panel-body">
+                    <p> <%= @user.description %></p> 
+                    <h4> Gender:  <%= @user.gender %>  </h4> 
+                    <h4> Usually I use this size: <%= @user.size %> </h4>    
+                    <h4> I live in: <%= @user.city%> </h4>                  
+                  </div>                  
+                </div>
+              </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
 
     <div class="row">
       <div class="col-lg-12">
         <div class="well">
-            <h2 id="user_products">My Offers</h2>
+          <h2 id="user_products">My Offers</h2>
 
           <div class="row">
-
             <div class="col-lg-12 " >
-
-            <div class="panel panel-warning">                
-                
+              <div class="panel panel-warning">             
                 <div class="panel-body">
-                 <%= render "uptable"%>
+                  <%= render "uptable"%>
                 </div>                  
-              </div> 
+              </div>
+            </div> 
+          </div>  
             
-        </div>
+      </div>
+    </div> 
 
-
-
-    </div>
+  </div>
 </div>
 
 
