--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,8 +47,7 @@
 
           <li>
             <strong>Price:</strong>
-            <%= @product.price %> (€) related to 
-            <strong>Price:</strong>
+            <%= @product.price %> € per
             <%= @product.duration %>
           </li>
 
