--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -70,14 +70,14 @@
 
     <div class="row">
       <div class="col-lg-12">
-        <div class="well">
-          <h2 id="user_products">My Offers</h2>
+        <div class="well",  id="user_products">
+          <h2>My Offers</h2>
 
           <div class="row">
             <div class="col-lg-12 " >
               <div class="panel panel-warning">             
                 <div class="panel-body">
-                  <%= render "uptable"%>
+                  <%= render "uproduct"%>
                 </div>                  
               </div>
             </div> 
