--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,42 +1,6 @@
 <div class="bs-docs-section">
 
-	<div class="jumbotron">
-	  <div class="row carousel-holder">
-	    <div class="col-md-12">
-	      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-              <li class="" data-slide-to="0" data-target="#carousel-example-generic"></li>
-              <li class="" data-slide-to="1" data-target="#carousel-example-generic"></li>
-              <li class="active" data-slide-to="2" data-target="#carousel-example-generic"></li>
-          </ol>
-
-          <div class="carousel-inner">
-            <div class="item">
-              <h1>Share Flair</h1>
-							<p class="lead">
-							  Teilen Macht Spaß ;)
-							</p>
-            </div>
-            <div class="item">
-              <h1>Share Flair</h1>
-							<p class="lead">
-							    Mein Kleiderschrank = Dein Kleiderschrank
-							</p>
-            </div>
-            <div class="item active">
-               <h1>Share Flair</h1>
-							<p class="lead">
-							    Next Generation Clothing
-							</p>
-            </div>
-          </div>
-
-          <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic"></a>
-          <a class="right carousel-control" data-slide="next" href="#carousel-example-generic"></a>               
-        </div>
-      </div>
- 		</div>
-	</div>
+	<%= render "carousel" %>
 
 	<div class="row">
 		<div class="col-sm-4 col-md-4 col-md-4">
