--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,19 +4,25 @@
     <div class="col-md-12">
       <h1 class="page-header">
         <%= @product.title %>    <br>         
-        <small>from User <%= @product.user.username %></small>
+        <small>from User <%=link_to @product.user.username, users_profile_path(id: @product.user_id) %></small>
       </h1>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-8">
-      <%= image_tag @product.image_url(:normal) if @product.image? %>
+      <% if @product.image? %>
+      <%= image_tag @product.image_url(:normal)%>
+      <% else %>
+      <%= render "carousel" %>
+      <% end %>
     </div>
 
     <div class="col-md-4">
-      <h3>Product Description</h3>
-      <p><%= @product.description %></p>
+      <% if @product.description? %>
+        <h3>Product Description</h3>
+        <p><%= @product.description %></p>
+      <% end %>
 
       <h3>Product Details</h3>
         <ul>
@@ -40,16 +46,24 @@
             <%= @product.size %>
           </li>
 
+          
+          <% if @product.color? %>
           <li>
-            <strong>Color:</strong>
+            <strong>Color: </strong>
             <%= @product.color %>
           </li>
+          <% end %>  
+          
 
+          <% if @product.price? %>
           <li>
-            <strong>Price:</strong>
-            <%= @product.price %> € per
-            <%= @product.duration %>
+            <strong>Price: </strong> <%= @product.price %> € 
+              <% if @product.duration? %>
+              per <%= @product.duration %>
+              <% end %>
           </li>
+          <% end %>          
+          
 
           <li>
             <strong>My Product is:</strong> 
@@ -59,7 +73,7 @@
               <%= f.radio_button :active, true, class: "checkable" %> 
             </div>
             <div class ="radio">
-              <%= f.label :active, "not available" %>
+              <%= f.label :active, "currently not available" %>
               <%= f.radio_button :active, false, class: "checkable"%>
             </div>
             <% end %>                      
@@ -69,8 +83,17 @@
       
 
       <%= link_to 'Back to All Products', products_path, class: "btn btn-info "  %> |
+      <% if @product.user_id != current_user.id %>
+      <%= link_to  (@product.user.username + "'s offers"), users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
+      <% else %>
+      <%= link_to  "My offers", users_profile_path(id: @product.user_id, anchor: "user_products"), class: "btn btn-info "  %> 
+      <% end %>
+      <br> <br>
+
+      <% if @product.user_id == current_user.id %>
       <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
       <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
     </div>
     
   </div>    
