--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -21,7 +21,7 @@ h1 {
 }
 
 #thumb{
-  height: 300px;
+  height: 330px;
 }
 
 #border{
@@ -41,6 +41,21 @@ footer{
 #f_id{
 	horizontal-align: middle;
    	text-align: center;
+}
+
+#pic{
+  
+  text-align: center;
+  height:80px;
+  width:150px;
+  background-color: #20B2AA;
+  position:relative;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:0;
+  padding-top: 30px;
 }
 
 
