--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shareflair</title>
+  <title>Share-Flair</title>
   <%= favicon_link_tag 'SF.png' %>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 
     <!--custom CSS -->
-    <link href="css/shop-homepage.css" rel="stylesheet">    
+      
     <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet"> 
     <%= stylesheet_link_tag 'products.css' %>  
 </head>
