Update Gemfile.lock fuer Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <!--custom CSS -->
       
-    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet"> 
+    <link href="http://bootswatch.com/2/amelia/bootstrap.css" rel="stylesheet"> 
     <%= stylesheet_link_tag 'products.css' %>  
 </head>
 
